modified font colors in header and section 1 to correctly match deligated color // added a bit more padding to the right of the paragraph tag to create a nicer gap // replaced the 1px border with a 2px border to better fit prototype image border // adjusted text sizing to fit prototype font size, did the same for section 3 quote

--- a/style.css
+++ b/style.css
@@ -3,12 +3,15 @@
     display: flex;
     flex-flow: row nowrap;
     justify-content: flex-start;
+    align-content: center;
+    align-items: center;
     background-color: #1F2937;
     color: white;
 }
 .header h1 {
-    padding-right: 20rem;
+    padding-right: 30rem;
     padding-left: 20rem;
+
 }
 .header a {
     align-self: center;
@@ -26,26 +29,29 @@
 }
 .section1_box1 h1 {
     font-size: 48px;
-    color: white;
+    color: #F9FAF8;
     font-weight: bold;
 }
-.section1_box1 p {
+.section1 p {
     font-size: 18px;
-    color: white;
-    padding-right: 20px;
+    color: #E5E7EB;
+    padding-right: 70px;
 }
 .section1_box1 button { 
-    background-color: blue;
+    background-color:#3882F6;
     border: 0px;
     border-radius: 3px;
     color: white;
     width: 90px;
     height: 30px;
+    font-size: .8em;
+    font-weight: bold;
 }
 .section1_box2{
     background-color: gray;
     margin: 5rem 20rem 10rem 0rem;
     flex: 1;
+    color: white;
 }
 .section2 {
     display:flex;
@@ -54,6 +60,11 @@
     justify-content: center;
     align-items: center;
     align-content: center;
+}
+.section2 h1 {
+    font-size: 36px;
+    font-weight: bold;
+    color: #1F2937;
 }
 .section2 p {
     font-size: 10px;
@@ -73,7 +84,7 @@
 .section2 img {
     max-width: 140px;
     max-height: 140px;
-    border: 1px solid blue;
+    border: 2px solid blue;
     border-radius:8px;  
     flex:1;
 }
@@ -82,9 +93,13 @@
     flex-flow: row wrap;
     justify-content: flex-end;
     background-color: #E5E7EB;
-    font-size: 36px;
     padding: 10rem 20rem 10rem 20rem;
 }
+.section3 em { 
+    font-size: 36px;
+    font-weight: italic; 
+    color: #1F2937;
+}
 .section3 h3 {
-    font-size: .8em;
+    font-size: 1.6em;
 }
